--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-scroll": "^1.9.3",
     "simplex-noise": "^4.0.3",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.3.1",
