--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.1",
     "match-sorter": "^8.1.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
