--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
@@ -23,8 +25,10 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "simplex-noise": "^4.0.3",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
